// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Actions/Button Big 1`] = `
<div>
  <Button
    onClick={[Function]}
    size="is-big"
  >
    <button
      className="button is-big"
      onClick={[Function]}
    >
      Big Button
    </button>
  </Button>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Actions/Button Borderless 1`] = `
<div>
  <Button
    border="is-borderless"
    onClick={[Function]}
  >
    <button
      className="button is-borderless"
      onClick={[Function]}
    >
      Borderless Button
    </button>
  </Button>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Actions/Button Inaccessible 1`] = `
<div>
  <button
    style={
      Object {
        "backgroundColor": "red",
        "color": "darkRed",
      }
    }
  >
    Inaccessible button
  </button>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Actions/Button Inline Icon 1`] = `
<div>
  <Button
    icon="arrow-back"
    inlineIcon="left"
    onClick={[Function]}
  >
    <button
      className="button is-inline inline-icon--left"
      onClick={[Function]}
    >
      <Icon
        className="button__icon"
        size="tiny"
        symbol="arrow-back"
      >
        <span
          className="ui-icon ui-tiny button__icon"
        >
          <svg>
            <use
              xlinkHref="#i-arrow-back"
            />
          </svg>
        </span>
      </Icon>
      <span
        className="button__content"
      >
        Go Back
      </span>
    </button>
  </Button>
  <br />
  <br />
  <Button
    icon="right"
    inlineIcon="right"
    onClick={[Function]}
  >
    <button
      className="button is-inline inline-icon--right"
      onClick={[Function]}
    >
      <span
        className="button__content"
      >
        Go Forward
      </span>
      <Icon
        className="button__icon"
        size="tiny"
        symbol="right"
      >
        <span
          className="ui-icon ui-tiny button__icon"
        >
          <svg>
            <use
              xlinkHref="#i-right"
            />
          </svg>
        </span>
      </Icon>
    </button>
  </Button>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Actions/Button Normal Case 1`] = `
<div>
  <Button
    normalCase={true}
    onClick={[Function]}
  >
    <button
      className="button is-normal-case"
      onClick={[Function]}
    >
      Button (Normal Case)
    </button>
  </Button>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Actions/Button Normal Case And Success 1`] = `
<div>
  <Button
    normalCase={true}
    onClick={[Function]}
    styleType="is-success"
  >
    <button
      className="button is-success is-normal-case"
      onClick={[Function]}
    >
      Button (Normal Case)
    </button>
  </Button>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Actions/Button Small 1`] = `
<div>
  <Button
    onClick={[Function]}
    size="is-small"
  >
    <button
      className="button is-small"
      onClick={[Function]}
    >
      Small Button
    </button>
  </Button>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Actions/Button Small And Primary 1`] = `
<div>
  <Button
    onClick={[Function]}
    size="is-small"
    styleType="is-primary"
  >
    <button
      className="button is-primary is-small"
      onClick={[Function]}
    >
      Small and Primary Button
    </button>
  </Button>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Actions/Button Standard 1`] = `
<div>
  <Button
    onClick={[Function]}
  >
    <button
      className="button"
      onClick={[Function]}
    >
      Hello Storybook
    </button>
  </Button>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Actions/Button Unstyled 1`] = `
<div>
  <Button
    onClick={[Function]}
    unstyled={true}
  >
    <button
      className="button is-unstyled"
      onClick={[Function]}
    >
      Unstyled Button
    </button>
  </Button>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;
